@@ -1,6 +1,7 @@
 2006-10-27	Richard van den Berg  <richard@vdberg.org>
-	* Added "Add xattr support" patch from Steve Grubb <sgrubb@redhat.com>
-	* Added "report miscompares to Linux Audit System" patch from Steve Grubb
+	* Added "Add xattr support" patch from James Antill <james-aide-38mkm@and.org>
+	* Added "report miscompares to Linux Audit System" patch from James Antill
+	* Added "Allow building without mhash library" patch from James Antill
 
 2006-10-10	Richard van den Berg  <richard@vdberg.org>
 	* Added note about rpl_malloc on AIX 5.3 with mhash
